--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <ul>
     <li>"new" - Add a Todo</li>
     <li>"list" - List all Todos</li>
+    <li>"delete" - Remove specific Todo</li>
     <li>"quit" - Quit app</li>
 </ul>
     
